--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
     "pg": "^8.7.3",
-    "secure-password": "^4.0.0",
-    "utils-playground": "^1.3.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
